Image Generation Added --v2.1

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
       <button id="generateBtn">Generate Story</button>
       <button id="streamBtn">Stream Story</button>
 
+      <button id="generateImages">Generate Images</button>
+
       <div class="output" id="output">
         Generated content will appear here...
+        <div id="image-grid" class="image-grid"></div>
       </div>
     </div>
 
